fix: Show favorite button on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -414,6 +414,7 @@ button {
 @media (max-width: 768px) {
   /* Make sure the edit/destroy buttons are shown on mobile
    */
+  .favorite-btn,
   .destroy-btn,
   .accordion-btn,
   .explore-btn,
